2009-04-28  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/client-types/mb-wm-client-menu.c:
	Popup menus aren't restricted to appear to the right
        of a particular X coordinate.  Other kinds of menu
        still are.

        Fixes NB#101437.

2009-04-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.35

2009-04-25  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        * matchbox/core/mb-wm-root-window.c:
        new flag to mean that a window should only be closed if
        it's topmost.
        Fixes NB#105384.

2009-04-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	  mb_wm_comp_mgr_clutter_handle_damage():
	    Handle the damage even if we don't want to repair.
	    If we fail to do so and we do get a damage while
	    updating is disabled (like in effects) then we won't
	    get damages anymore at all.  May fix some X errors
	    around XDamageDestroy() as well.

2009-04-22  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.34

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_release_handler): Add some
	missing NULL checks.

2009-04-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Michal Maruska for handling WM_TAKE_FOCUS protocol.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_focus):
	Send WM_TAKE_FOCUS ClientMessage if the window expects that.

2009-04-17  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.33

	* matchbox/core/mb-wm-client-window.h: Add name_has_markup member to
	struct MBWMClientWindow.
	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Set name_has_markup member when
	reading the window title. Related to fix for NB#108303

2009-04-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_press_handler): Remove the
	ButtonRelease handler if we catch ButtonRelease in the loop.
	(mb_wm_decor_button_press_handler): Set up ButtonRelease handler to